k8s/development/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quizmeup-configuration-server-development
  namespace: quizmeup-development
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app.kubernetes.io/name: quizmeup-configuration-server-development
    app.kubernetes.io/component: configuration-server-development
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: quizmeup-configuration-server-development
      app.kubernetes.io/component: configuration-server-development
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quizmeup-configuration-server-development
        app.kubernetes.io/component: configuration-server-development
    spec:
      containers:
        - name: quizmeup-configuration-server-development-container
          image:  quizmeup/configuration-server:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 380Mi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              port: 8080
              scheme: HTTP
              path: /actuator/health
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 120
          readinessProbe:
            failureThreshold: 3
            httpGet:
              port: 8080
              scheme: HTTP
              path: /actuator/health
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 120
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
