k8s/development/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quizmeup-configuration-server-development-ingress
  namespace: quizmeup-development
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: configuration-server.quizmeup.dev
      http:
        paths:
          - backend:
                service:
                    name: quizmeup-configuration-server-development-service
                    port:
                      number: 8080
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - configuration-server.quizmeup.dev
      secretName: quizmeup-configuration-server-development-certificate
status:
  loadBalancer: {}
